--- a/src/main/resources/templates/traversal.html
+++ b/src/main/resources/templates/traversal.html
@@ -48,9 +48,8 @@
 
             <div class="box-float">
                 <div class="float1">
-
                     <a style="float:right" class="btn btn-sm btn-danger"
-                       th:href="@{/Traversal/download?filename=../../../../../../../etc/passwd}">
+                       th:href="@{/Traversal/download?filename=../src/main/resources/application.properties}">
                         <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
                              viewBox="0 0 16 16">
                             <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
@@ -58,7 +57,7 @@
                         <span class="align-middle"> Run</span></a>
                     <h5><span class="lnr lnr-bug"> 漏洞代码 - 任意文件下载</span></h5>
                     <label for="code1"></label><textarea class="form-control" id="code1">
-// 文件路径没做限制，通过../递归下载任意文件，如下载../../../../../../../etc/passwd文件
+// 文件路径没做限制，通过../递归下载任意文件，如下载../src/main/resources/application.properties文件
 
 public String download(String filename, HttpServletResponse response) {
     String filePath = System.getProperty("user.dir") + "/logs/" + filename;
@@ -79,37 +78,45 @@ public String download(String filename, HttpServletResponse response) {
                     </textarea><br><br>
 
                     <a style="float:right" class="btn btn-sm btn-danger" target="_blank"
-                       th:href="@{/Traversal/list?filename=../}">
+                       th:href="@{/Traversal/download2?filename=..././src/main/resources/application.properties}">
                         <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
                              viewBox="0 0 16 16">
                             <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
                         </svg>
                         <span class="align-middle"> Run</span></a>
-                    <h5><span class="lnr lnr-bug"> 漏洞代码 - 任意路径遍历</span></h5>
-                    <label for="code2"></label><textarea class="form-control" id="code2">
-// 攻击者可能会传入 "../../" 来访问项目目录以外的文件
+                    <h5><span class="lnr lnr-bug"> 漏洞代码 - 文件读取过滤"../"</span></h5>
+                    <label for="code2"></label>
+<textarea class="form-control" id="code2">
+// 单次过滤“../”，攻击者可通过“..././”绕过
 
-public String fileList(String filename) {
+public String download2(String filename, HttpServletResponse response) {
+    // 下载的文件路径
     String filePath = System.getProperty("user.dir") + "/logs/" + filename;
-    StringBuilder sb = new StringBuilder();
+    log.info("[vul] 任意文件下载：" + filePath);
 
-    File f = new File(filePath);
-    File[] fs = f.listFiles();
+    //替换../
+    filePath = filePath.replace("../","").replace("..\\","");
 
-    if (fs != null) {
-        for (File ff : fs) {
-            sb.append(ff.getName()).append("<br>");
-        }
-        return sb.toString();
+    try (InputStream inputStream = new BufferedInputStream(Files.newInputStream(Paths.get(filePath)))) {
+        response.setHeader("Content-Disposition", "attachment; filename=" + filename);
+        response.setContentLength((int) Files.size(Paths.get(filePath)));
+        response.setContentType("application/octet-stream");
+
+        // 使用 Apache Commons IO 库的工具方法将输入流中的数据拷贝到输出流中
+        IOUtils.copy(inputStream, response.getOutputStream());
+        log.info("文件 {} 下载成功，路径：{}", filename, filePath);
+        return "下载文件成功：" + filePath;
+    } catch (IOException e) {
+        log.error("下载文件失败，路径：{}", filePath, e);
+        return "未找到文件：" + filePath;
     }
-    return filePath + "目录不存在！";
 }
-                    </textarea>
+</textarea>
                 </div>
 
                 <div class="float2">
                     <a style="float:right" class="btn btn-sm btn-success" target="_blank"
-                       th:href="@{/Traversal/download/safe?filename=../}">
+                       th:href="@{/Traversal/download/safe?filename=../src/main/resources/application.properties}">
                         <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
                              viewBox="0 0 16 16">
                             <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
@@ -117,21 +124,26 @@ public String fileList(String filename) {
                         <span class="align-middle"> Run</span></a>
                     <h5><span class="lnr lnr-smile"> 安全代码 - 过滤</span></h5>
                     <label for="code3"></label><textarea class="form-control" id="code3">
-// 过滤..和/ ，可以防止遍历操作
+// 过滤不可见字符防止截断操作，匹配“..”
 
-public String safe(String filename) {
-    if (!Security.checkTraversal(filename)) {
-        String filePath = System.getProperty("user.dir") + "/logs/" + filename;
+public String safe(String filename) throws Exception {
+    String filePath = System.getProperty("user.dir") + "/logs/" + filename;
+    if (checkFile(filePath)) {
         return "安全路径：" + filePath;
     } else {
-        return "检测到非法遍历";
+        return "检测到非法遍历！";
     }
 }
 
-public static boolean checkTraversal(String content) {
-    return content.contains("..") || content.contains("/");
+public boolean checkFile(String path) throws Exception {
+    //处理截断问题
+    path = path.replaceAll("\\p{C}", "");
+    if(path.contains("..")){
+        return false;
+    }
+    return true;
 }
-                    </textarea><br><br>
+</textarea><br><br>
 
                 </div>
             </div>
