--- a/src/main/resources/templates/traversal.html
+++ b/src/main/resources/templates/traversal.html
@@ -55,8 +55,8 @@
                             <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
                         </svg>
                         <span class="align-middle"> Run</span></a>
-                    <h5><span class="lnr lnr-bug"> 漏洞代码 - 任意文件下载</span></h5>
-                    <label for="code1"></label><textarea class="form-control" id="code1">
+                    <h5><span class="lnr lnr-bug"> 漏洞代码 - 任意文件下载</span></h5><br>
+                    <textarea class="form-control" id="code1">
 // 文件路径没做限制，通过../递归下载任意文件，如下载../src/main/resources/application.properties文件
 
 public String download(String filename, HttpServletResponse response) {
@@ -84,8 +84,7 @@ public String download(String filename, HttpServletResponse response) {
                             <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
                         </svg>
                         <span class="align-middle"> Run</span></a>
-                    <h5><span class="lnr lnr-bug"> 漏洞代码 - 文件读取过滤"../"</span></h5>
-                    <label for="code2"></label>
+                    <h5><span class="lnr lnr-bug"> 漏洞代码 - 文件读取过滤"../"</span></h5><br>
 <textarea class="form-control" id="code2">
 // 单次过滤“../”，攻击者可通过“..././”绕过
 
@@ -109,6 +108,42 @@ public String download2(String filename, HttpServletResponse response) {
     } catch (IOException e) {
         log.error("下载文件失败，路径：{}", filePath, e);
         return "未找到文件：" + filePath;
+    }
+}
+</textarea><br><br>
+
+                    <h5><span class="lnr lnr-bug"> 漏洞代码 - 解压文件</span></h5><br>
+                    <form method="POST" th:action="@{/Traversal/unzip}" enctype="multipart/form-data">
+                        <input type="file" name="file"/>
+                        <input type="submit" class="btn btn-sm btn-danger" value="上传"/>
+                    </form>
+                    <br>
+                    <textarea class="form-control" id="code4">
+// 解压文件时未做合法性校验，此时上传zip中的文件，文件名中若带有"../"即可目录穿越，在任意位置写入任意文件
+
+public void unzip(@RequestParam("file") MultipartFile zipfile, HttpServletResponse response) throws Exception {
+    // 创建临时文件
+    String fileName = zipfile.getOriginalFilename();
+    String prefix = fileName.substring(fileName.lastIndexOf("."));
+    File file = File.createTempFile(fileName, prefix);
+    zipfile.transferTo(file);
+
+    ZipFile zf = new ZipFile(file);
+    ZipInputStream zis = new ZipInputStream(new FileInputStream(file));
+    ZipEntry entry;
+    //遍历zip中的文件
+    while((entry = zis.getNextEntry()) != null){
+        //构造输出流
+        String zipfilename = entry.getName();
+        File outfile = new File(System.getProperty("user.dir") + "/src/main/resources/static/file/" + zipfilename);
+        FileOutputStream fos = new FileOutputStream(outfile);
+        //将zip中的内容读出
+        InputStream inputStream = zf.getInputStream(entry);
+        byte[] bytes = new byte[inputStream.available()];
+        inputStream.read(bytes);
+        //写文件并关闭连接
+        fos.write(bytes);
+        ......
     }
 }
 </textarea>
@@ -142,6 +177,56 @@ public boolean checkFile(String path) throws Exception {
         return false;
     }
     return true;
+}
+</textarea>
+
+                    <br><br>
+
+                    <h5><span class="lnr lnr-bug"> 安全代码 - 解压文件过滤</span></h5><br>
+                    <form method="POST" th:action="@{/Traversal/unzip/safe}" enctype="multipart/form-data">
+                        <input type="file" name="file"/>
+                        <input type="submit" class="btn btn-sm btn-danger" value="上传"/>
+                    </form>
+                    <br>
+                    <textarea class="form-control" id="code5">
+// 过滤不可见字符，校验拼接后的解压路径是否存在“..”，文件名后缀白名单校验
+
+public void unzipSafe(@RequestParam("file") MultipartFile zipfile, HttpServletResponse response) throws Exception {
+    // 创建临时文件
+    String fileName = zipfile.getOriginalFilename();
+    String prefix = fileName.substring(fileName.lastIndexOf("."));
+    File file = File.createTempFile(fileName, prefix);
+    zipfile.transferTo(file);
+
+    ZipFile zf = new ZipFile(file);
+    ZipInputStream zis = new ZipInputStream(new FileInputStream(file));
+    ZipEntry entry;
+    //遍历zip中的文件
+    while((entry = zis.getNextEntry()) != null){
+        //构造输出流
+        String zipfilename = entry.getName();
+        String filepath = System.getProperty("user.dir") + "/src/main/resources/static/file/" + zipfilename;
+        if (!checkFile(filepath) || !checkExt(filepath)){
+            outputStream.write("解压失败，zip文件存在问题！".getBytes("GBK"));
+            return;
+        }
+        ......
+    }
+}
+
+public boolean checkFile(String path) throws Exception {
+    //处理截断问题
+    path = path.replaceAll("\\p{C}", "");
+    if(path.contains("..")){
+        return false;
+    }
+    return true;
+}
+
+public boolean checkExt(String path){
+    String ext = path.substring(path.lastIndexOf("."), path.length());
+    List<String> exts = Arrays.asList(".jpg", ".png", ".jpeg", ".gif");
+    return exts.contains(ext);
 }
 </textarea><br><br>
 
