--- a/src/main/resources/templates/sqli_tkMapper.html
+++ b/src/main/resources/templates/sqli_tkMapper.html
@@ -31,7 +31,7 @@
         <div class="tab-pane dec shadow-sm p-3 mb-4 rounded active" id="aa">
           SQLI(SQL Injection)，
           SQL注入是因为程序未能正确对用户的输入进行检查，将用户的输入以拼接的方式带入SQL语句，导致了SQL注入的产生。攻击者可通过SQL注入直接获取数据库信息，造成信息泄漏。<br>
-          JDBC有两个方法执行SQL语句，分别是PrepareStatement和Statement。
+          tkMapper是一个自动生产SQL语句的java组件
         </div>
         <div class="tab-pane fade" id="bb">
                     <textarea disabled="disabled" class="form-control shadow-sm p-3 mb-5 rounded" id="coder"
