--- a/src/main/resources/templates/sqli_mybatis.html
+++ b/src/main/resources/templates/sqli_mybatis.html
@@ -45,6 +45,32 @@
 
             <div class="box-float">
                 <div class="float1">
+                    <h5><span class="lnr lnr-bug"> 漏洞代码 - 搜索框注入</span></h5>
+                    <form role="search" th:action="@{/SQLI/MyBatis/vul/search}" method="get" target="_blank">
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control" name="q"
+                                   value="test%' union select 1,user(),@@version_compile_os-- " style="color: #b5babb">
+                            <div class="input-group-append">
+                                <button class="btn btn-sm btn-danger" type="submit">搜索</button>
+                            </div>
+                        </div>
+                    </form>
+                    <label for="code2"></label><textarea class="form-control" id="code2">
+// 模糊搜索时，直接使用'%#{q}%' 会报错，部分研发图方便直接改成'%${q}%'从而造成注入
+
+public List<Users> search(@RequestParam("q") String q) {
+    log.info("[vul] mybaits: " + q);
+    return userMapper.search(q);
+}
+
+@Select("select * from users where user like '%${q}%'")
+List<User> search(String q);
+
+// 安全代码,采用concat
+@Select("select * from users where user like concat('%',#{q},'%')")
+List<User> search(String q);
+                    </textarea><br><br>
+
                     <a target="_blank" style="float:right" class="btn btn-sm btn-danger"
                        href="/SQLI/MyBatis/vul/order?field=id&sort=desc,abs(111111)">
                         <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
@@ -69,32 +95,25 @@ public List<User> orderBy(String field, String sort) {
 // 注解方式
 @Select("select * from users order by ${field} desc")
 List<User> orderBy2(@Param("field") String field);
-                    </textarea><br><br>
-
-                    <h5><span class="lnr lnr-bug"> 漏洞代码 - 搜索框注入</span></h5>
-                    <form role="search" th:action="@{/SQLI/MyBatis/vul/search}" method="get" target="_blank">
-                        <div class="input-group mb-3">
-                            <input type="text" class="form-control" name="q"
-                                   value="test%' union select 1,user(),@@version_compile_os-- " style="color: #b5babb">
-                            <div class="input-group-append">
-                                <button class="btn btn-sm btn-danger" type="submit">搜索</button>
-                            </div>
-                        </div>
-                    </form>
-                    <label for="code2"></label><textarea class="form-control" id="code2">
-// 模糊搜索时，直接使用'%#{q}%' 会报错，部分研发图方便直接改成'%${q}%'从而造成注入
-
-@Select("select * from users where user like '%${q}%'")
-List<User> search(String q);
-
-// 安全代码,采用concat
-@Select("select * from users where user like concat('%',#{q},'%')")
-List<User> search(String q);
                     </textarea>
-
                 </div>
 
                 <div class="float2">
+                    <a target="_blank" style="float:right" class="btn btn-sm btn-success"
+                       href="/SQLI/MyBatis/safe/id/1">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
+                             viewBox="0 0 16 16">
+                            <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
+                        </svg>
+                        <span class="align-middle"> Run</span></a>
+                    <h5><span class="lnr lnr-smile"> 安全代码 - 强制类型</span></h5>
+                    <label for="code4"></label><textarea class="form-control" id="code4">
+// 使用 ${} 本身是存在注入的，但由于强制使用Integer或long类型导致注入无效（无法注入字符串）
+
+@Select("select * from users where id = ${id}")
+List<User> queryById2(@Param("id") Integer id);
+                    </textarea><br><br>
+
                     <a target="_blank" style="float:right" class="btn btn-sm btn-success"
                        href="/SQLI/MyBatis/safe/order?field=id">
                         <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
@@ -118,21 +137,6 @@ List<User> search(String q);
         </otherwise>
     </choose>
 </select>
-                    </textarea><br><br>
-
-                    <a target="_blank" style="float:right" class="btn btn-sm btn-success"
-                       href="/SQLI/MyBatis/safe/id/1">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
-                             viewBox="0 0 16 16">
-                            <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
-                        </svg>
-                        <span class="align-middle"> Run</span></a>
-                    <h5><span class="lnr lnr-smile"> 安全代码 - 强制类型</span></h5>
-                    <label for="code4"></label><textarea class="form-control" id="code4">
-// 使用 ${} 本身是存在注入的，但由于强制使用Integer或long类型导致注入无效（无法注入字符串）
-
-@Select("select * from users where id = ${id}")
-List<User> queryById2(@Param("id") Integer id);
                     </textarea><br><br>
 
                     <a target="_blank" style="float:right" class="btn btn-sm btn-success"
