--- a/src/main/resources/templates/commons/commons.html
+++ b/src/main/resources/templates/commons/commons.html
@@ -123,27 +123,27 @@
                 </div>
             </li>
 
-            <li class="nav-item">
-                <a href="#auth_submenu" data-toggle="collapse"
-                   th:class="${(active=='captcha_vul.html' || active=='jwt.html')?'nav-link active':'nav-link'}"><i
-                        class="lnr lnr-diamond"></i>
-                    <span>失效的身份认证</span> <i class="icon-submenu lnr lnr-chevron-left"></i></a>
-                <div id="auth_submenu"
-                     th:class="${(active=='captcha_vul.html' || active=='jwt.html') ? 'collapsed':'collapse'}">
-                    <ul class="nav flex-column">
-                        <li>
-                            <a th:class="${active=='jwt.html' ? 'nav-link active':'nav-link'}"
-                               th:href="@{/index/jwt}">
-                                <i class="lnr lnr-bug"></i><span>JWT弱加密</span></a>
-                        </li>
-                        <li>
-                            <a th:class="${active=='captcha_vul.html' ? 'nav-link active':'nav-link'}"
-                               th:href="@{/index/captcha}"><i
-                                    class="lnr lnr-bug"></i><span>验证码复用</span></a>
-                        </li>
-                    </ul>
-                </div>
-            </li>
+<!--            <li class="nav-item">-->
+<!--                <a href="#auth_submenu" data-toggle="collapse"-->
+<!--                   th:class="${(active=='captcha_vul.html' || active=='jwt.html')?'nav-link active':'nav-link'}"><i-->
+<!--                        class="lnr lnr-diamond"></i>-->
+<!--                    <span>失效的身份认证</span> <i class="icon-submenu lnr lnr-chevron-left"></i></a>-->
+<!--                <div id="auth_submenu"-->
+<!--                     th:class="${(active=='captcha_vul.html' || active=='jwt.html') ? 'collapsed':'collapse'}">-->
+<!--                    <ul class="nav flex-column">-->
+<!--                        <li>-->
+<!--                            <a th:class="${active=='jwt.html' ? 'nav-link active':'nav-link'}"-->
+<!--                               th:href="@{/index/jwt}">-->
+<!--                                <i class="lnr lnr-bug"></i><span>JWT弱加密</span></a>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <a th:class="${active=='captcha_vul.html' ? 'nav-link active':'nav-link'}"-->
+<!--                               th:href="@{/index/captcha}"><i-->
+<!--                                    class="lnr lnr-bug"></i><span>验证码复用</span></a>-->
+<!--                        </li>-->
+<!--                    </ul>-->
+<!--                </div>-->
+<!--            </li>-->
 
             <li class="nav-item">
                 <a href="#xss_submenu"
@@ -180,18 +180,18 @@
                 </a>
             </li>
 
-            <li class="nav-item">
-                <a th:class="${(active=='deserialize.html') ? 'nav-link active':'nav-link'}"
-                   th:href="@{/index/deserialize}">
-                    <i class="lnr lnr-lock"></i><span>反序列化漏洞</span>
-                </a>
-            </li>
+<!--            <li class="nav-item">-->
+<!--                <a th:class="${(active=='deserialize.html') ? 'nav-link active':'nav-link'}"-->
+<!--                   th:href="@{/index/deserialize}">-->
+<!--                    <i class="lnr lnr-lock"></i><span>反序列化漏洞</span>-->
+<!--                </a>-->
+<!--            </li>-->
 
-            <li class="nav-item">
-                <a th:class="${active=='spel.html' ? 'nav-link active':'nav-link'}" th:href="@{/index/spel}">
-                    <i class="lnr lnr-poop"></i><span>表达式注入</span>
-                </a>
-            </li>
+<!--            <li class="nav-item">-->
+<!--                <a th:class="${active=='spel.html' ? 'nav-link active':'nav-link'}" th:href="@{/index/spel}">-->
+<!--                    <i class="lnr lnr-poop"></i><span>表达式注入</span>-->
+<!--                </a>-->
+<!--            </li>-->
 
 
             <li class="nav-item">
@@ -207,129 +207,129 @@
                 </a>
             </li>
 
-            <li class="nav-item">
-                <a th:class="${active=='unauth.html' ? 'nav-link active':'nav-link'}"
-                   th:href="@{/index/unauth}">
-                    <i class="lnr lnr-leaf"></i><span>接口未授权访问</span>
-                </a>
-            </li>
+<!--            <li class="nav-item">-->
+<!--                <a th:class="${active=='unauth.html' ? 'nav-link active':'nav-link'}"-->
+<!--                   th:href="@{/index/unauth}">-->
+<!--                    <i class="lnr lnr-leaf"></i><span>接口未授权访问</span>-->
+<!--                </a>-->
+<!--            </li>-->
 
-            <li class="nav-item">
-                <a th:class="${active=='ssti.html' ? 'nav-link active':'nav-link'}" th:href="@{/index/ssti}">
-                    <i class="lnr lnr-cloud"></i><span>SSTI模版注入</span>
-                </a>
-            </li>
+<!--            <li class="nav-item">-->
+<!--                <a th:class="${active=='ssti.html' ? 'nav-link active':'nav-link'}" th:href="@{/index/ssti}">-->
+<!--                    <i class="lnr lnr-cloud"></i><span>SSTI模版注入</span>-->
+<!--                </a>-->
+<!--            </li>-->
 
-            <li class="nav-item">
-                <a th:class="${active=='jndi.html' ? 'nav-link active':'nav-link'}"
-                   th:href="@{/index/jndi}">
-                    <i class="lnr lnr-magic-wand"></i><span>JNDI注入</span>
-                </a>
-            </li>
+<!--            <li class="nav-item">-->
+<!--                <a th:class="${active=='jndi.html' ? 'nav-link active':'nav-link'}"-->
+<!--                   th:href="@{/index/jndi}">-->
+<!--                    <i class="lnr lnr-magic-wand"></i><span>JNDI注入</span>-->
+<!--                </a>-->
+<!--            </li>-->
 
-            <li class="nav-item">
-                <a href="#middle_submenu" data-toggle="collapse"
-                   th:class="${(active=='xstream.html' || active=='shiro.html' || active=='fastjson.html' || active=='log4j.html' || active=='jackson.html') ? 'nav-link active':'nav-link'}"><i
-                        class="lnr lnr-drop"></i>
-                    <span>组件漏洞</span> <i class="icon-submenu lnr lnr-chevron-left"></i></a>
+<!--            <li class="nav-item">-->
+<!--                <a href="#middle_submenu" data-toggle="collapse"-->
+<!--                   th:class="${(active=='xstream.html' || active=='shiro.html' || active=='fastjson.html' || active=='log4j.html' || active=='jackson.html') ? 'nav-link active':'nav-link'}"><i-->
+<!--                        class="lnr lnr-drop"></i>-->
+<!--                    <span>组件漏洞</span> <i class="icon-submenu lnr lnr-chevron-left"></i></a>-->
 
-                <div id="middle_submenu"
-                     th:class="${(active=='xstream.html' || active=='shiro.html' || active=='fastjson.html' || active=='log4j.html' || active=='jackson.html') ? 'collapsed':'collapse'}">
-                    <ul class="nav flex-column">
-                        <li>
-                            <a th:class="${active=='xstream.html' ? 'nav-link active':'nav-link'}"
-                               th:href="@{/index/xstream}">
-                                <i class="lnr lnr-bug"></i><span>XStream</span></a>
-                        </li>
-                        <li>
-                            <a th:class="${active=='fastjson.html' ? 'nav-link active':'nav-link'}"
-                               th:href="@{/index/fastjson}">
-                                <i class="lnr lnr-bug"></i><span>Fastjson</span></a>
-                        </li>
-                        <li>
-                            <a th:class="${active=='jackson.html' ? 'nav-link active':'nav-link'}"
-                               th:href="@{/index/jackson}">
-                                <i class="lnr lnr-bug"></i><span>Jackson</span></a>
-                        </li>
-                        <li>
-                            <a th:class="${active=='log4j.html' ? 'nav-link active':'nav-link'}"
-                               th:href="@{/index/log4j}">
-                                <i class="lnr lnr-bug"></i><span>Log4j2</span></a>
-                        </li>
-                        <li>
-                            <a th:class="${active=='shiro.html' ? 'nav-link active':'nav-link'}"
-                               href="#">
-                                <i class="lnr lnr-bug"></i><span>Shiro</span></a>
-                        </li>
+<!--                <div id="middle_submenu"-->
+<!--                     th:class="${(active=='xstream.html' || active=='shiro.html' || active=='fastjson.html' || active=='log4j.html' || active=='jackson.html') ? 'collapsed':'collapse'}">-->
+<!--                    <ul class="nav flex-column">-->
+<!--                        <li>-->
+<!--                            <a th:class="${active=='xstream.html' ? 'nav-link active':'nav-link'}"-->
+<!--                               th:href="@{/index/xstream}">-->
+<!--                                <i class="lnr lnr-bug"></i><span>XStream</span></a>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <a th:class="${active=='fastjson.html' ? 'nav-link active':'nav-link'}"-->
+<!--                               th:href="@{/index/fastjson}">-->
+<!--                                <i class="lnr lnr-bug"></i><span>Fastjson</span></a>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <a th:class="${active=='jackson.html' ? 'nav-link active':'nav-link'}"-->
+<!--                               th:href="@{/index/jackson}">-->
+<!--                                <i class="lnr lnr-bug"></i><span>Jackson</span></a>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <a th:class="${active=='log4j.html' ? 'nav-link active':'nav-link'}"-->
+<!--                               th:href="@{/index/log4j}">-->
+<!--                                <i class="lnr lnr-bug"></i><span>Log4j2</span></a>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <a th:class="${active=='shiro.html' ? 'nav-link active':'nav-link'}"-->
+<!--                               href="#">-->
+<!--                                <i class="lnr lnr-bug"></i><span>Shiro</span></a>-->
+<!--                        </li>-->
 
-                    </ul>
-                </div>
-            </li>
+<!--                    </ul>-->
+<!--                </div>-->
+<!--            </li>-->
 
-            <li class="nav-item">
-                <a href="#other_submenu" data-toggle="collapse"
-                   th:class="${(active=='actuator.html' || active=='redirect.html' || active=='xff.html' || active=='dos.html' || active=='cors.html' || active=='swagger.html' || active=='xpath.html' || active=='csrf.html' || active=='csv_injection.html') ? 'nav-link active':'nav-link'}"><i
-                        class="lnr lnr-location"></i>
-                    <span>其他漏洞</span> <i class="icon-submenu lnr lnr-chevron-left"></i></a>
-                <div id="other_submenu"
-                     th:class="${(active=='actuator.html' || active=='redirect.html' || active=='xff.html' || active=='dos.html' || active=='cors.html' || active=='swagger.html' || active=='xpath.html' || active=='csrf.html' || active=='csv_injection.html') ? 'collapsed':'collapse'}">
-                    <ul class="nav flex-column">
-                        <li class="nav-item">
-                            <a th:class="${active=='redirect.html' ? 'nav-link active':'nav-link'}"
-                               th:href="@{/index/redirect}">
-                                <i class="lnr lnr-bug"></i><span>开放重定向</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a th:class="${active=='actuator.html' ? 'nav-link active':'nav-link'}"
-                               th:href="@{/index/actuator}">
-                                <i class="lnr lnr-bug"></i><span>Actuator</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a th:class="${active=='xff.html' ? 'nav-link active':'nav-link'}" th:href="@{/index/xff}">
-                                <i class="lnr lnr-bug"></i><span>IP地址伪造</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a th:class="${active=='swagger.html' ? 'nav-link active':'nav-link'}"
-                               th:href="@{/index/swagger}">
-                                <i class="lnr lnr-bug"></i><span>Swagger未授权</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a th:class="${active=='cors.html' ? 'nav-link active':'nav-link'}"
-                               th:href="@{/index/cors}">
-                                <i class="lnr lnr-bug"></i><span>CORS</span>
-                            </a>
-                        </li>
+<!--            <li class="nav-item">-->
+<!--                <a href="#other_submenu" data-toggle="collapse"-->
+<!--                   th:class="${(active=='actuator.html' || active=='redirect.html' || active=='xff.html' || active=='dos.html' || active=='cors.html' || active=='swagger.html' || active=='xpath.html' || active=='csrf.html' || active=='csv_injection.html') ? 'nav-link active':'nav-link'}"><i-->
+<!--                        class="lnr lnr-location"></i>-->
+<!--                    <span>其他漏洞</span> <i class="icon-submenu lnr lnr-chevron-left"></i></a>-->
+<!--                <div id="other_submenu"-->
+<!--                     th:class="${(active=='actuator.html' || active=='redirect.html' || active=='xff.html' || active=='dos.html' || active=='cors.html' || active=='swagger.html' || active=='xpath.html' || active=='csrf.html' || active=='csv_injection.html') ? 'collapsed':'collapse'}">-->
+<!--                    <ul class="nav flex-column">-->
+<!--                        <li class="nav-item">-->
+<!--                            <a th:class="${active=='redirect.html' ? 'nav-link active':'nav-link'}"-->
+<!--                               th:href="@{/index/redirect}">-->
+<!--                                <i class="lnr lnr-bug"></i><span>开放重定向</span></a>-->
+<!--                        </li>-->
+<!--                        <li class="nav-item">-->
+<!--                            <a th:class="${active=='actuator.html' ? 'nav-link active':'nav-link'}"-->
+<!--                               th:href="@{/index/actuator}">-->
+<!--                                <i class="lnr lnr-bug"></i><span>Actuator</span>-->
+<!--                            </a>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <a th:class="${active=='xff.html' ? 'nav-link active':'nav-link'}" th:href="@{/index/xff}">-->
+<!--                                <i class="lnr lnr-bug"></i><span>IP地址伪造</span>-->
+<!--                            </a>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <a th:class="${active=='swagger.html' ? 'nav-link active':'nav-link'}"-->
+<!--                               th:href="@{/index/swagger}">-->
+<!--                                <i class="lnr lnr-bug"></i><span>Swagger未授权</span>-->
+<!--                            </a>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <a th:class="${active=='cors.html' ? 'nav-link active':'nav-link'}"-->
+<!--                               th:href="@{/index/cors}">-->
+<!--                                <i class="lnr lnr-bug"></i><span>CORS</span>-->
+<!--                            </a>-->
+<!--                        </li>-->
 
-                        <li>
-                            <a th:class="${active=='dos.html' ? 'nav-link active':'nav-link'}"
-                               th:href="@{/index/dos}"><i
-                                    class="lnr lnr-bug"></i><span>DoS攻击</span></a>
-                        </li>
+<!--                        <li>-->
+<!--                            <a th:class="${active=='dos.html' ? 'nav-link active':'nav-link'}"-->
+<!--                               th:href="@{/index/dos}"><i-->
+<!--                                    class="lnr lnr-bug"></i><span>DoS攻击</span></a>-->
+<!--                        </li>-->
 
-                        <li>
-                            <a th:class="${active=='xpath.html' ? 'nav-link active':'nav-link'}"
-                               th:href="@{/index/xpath}"><i
-                                    class="lnr lnr-bug"></i><span>XPath注入</span></a>
-                        </li>
+<!--                        <li>-->
+<!--                            <a th:class="${active=='xpath.html' ? 'nav-link active':'nav-link'}"-->
+<!--                               th:href="@{/index/xpath}"><i-->
+<!--                                    class="lnr lnr-bug"></i><span>XPath注入</span></a>-->
+<!--                        </li>-->
 
-                        <li>
-                            <a th:class="${active=='csv_injection.html' ? 'nav-link active':'nav-link'}"
-                               th:href="@{/index/csv}"><i
-                                    class="lnr lnr-bug"></i><span>CSV注入</span></a>
-                        </li>
+<!--                        <li>-->
+<!--                            <a th:class="${active=='csv_injection.html' ? 'nav-link active':'nav-link'}"-->
+<!--                               th:href="@{/index/csv}"><i-->
+<!--                                    class="lnr lnr-bug"></i><span>CSV注入</span></a>-->
+<!--                        </li>-->
 
-                        <li>
-                            <a th:class="${active=='csrf.html' ? 'nav-link active':'nav-link'}"
-                               th:href="@{/index/csrf}"><i
-                                    class="lnr lnr-bug"></i><span>CSRF</span></a>
-                        </li>
+<!--                        <li>-->
+<!--                            <a th:class="${active=='csrf.html' ? 'nav-link active':'nav-link'}"-->
+<!--                               th:href="@{/index/csrf}"><i-->
+<!--                                    class="lnr lnr-bug"></i><span>CSRF</span></a>-->
+<!--                        </li>-->
 
-                    </ul>
-                </div>
-            </li>
+<!--                    </ul>-->
+<!--                </div>-->
+<!--            </li>-->
 
         </ul>
     </div>
