--- a/src/main/resources/templates/rce.html
+++ b/src/main/resources/templates/rce.html
@@ -80,7 +80,7 @@ public static String processbuilderVul(String ip) throws IOException {
     return output.toString();
 }
                     </textarea><br><br>
-
+                    <hr>
                     <a style="float:right" class="btn btn-sm btn-danger" target="_blank"
                        th:href="@{/RCE/Runtime/vul?cmd=id}">
                         <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
@@ -100,8 +100,9 @@ public static String vul(String cmd) {
         InputStreamReader isr = new InputStreamReader(fis);
         BufferedReader br = new BufferedReader(isr);
      ...
-                    </textarea><br><br>
-
+                    </textarea>
+                    <br><br>
+                    <!--<hr>
                     <a style="float:right" class="btn btn-sm btn-danger" target="_blank"
                        href="/RCE/ProcessImpl/vul?cmd=id">
                         <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
@@ -110,7 +111,7 @@ public static String vul(String cmd) {
                         </svg>
                         <span class="align-middle"> Run</span></a>
                     <h5><span class="lnr lnr-bug"> 漏洞代码 - ProcessImpl</span></h5>
-                    <label for="code5"></label><textarea class="form-control" id="code5">
+                    <label for="code3"></label><textarea class="form-control" id="code3">
 // ProcessImpl 是更为底层的实现，Runtime和ProcessBuilder执行命令实际上也是调用了ProcessImpl这个类
 // ProcessImpl 类是一个抽象类不能直接调用，但可以通过反射来间接调用ProcessImpl来达到执行命令的目的
 
@@ -138,7 +139,7 @@ public static String vul(String cmd) throws Exception {
                         </svg>
                         <span class="align-middle"> Run</span></a>
                     <h5><span class="lnr lnr-bug"> 漏洞代码 - 脚本引擎代码注入</span></h5>
-                    <label for="code3"></label><textarea class="form-control" id="code3">
+                    <label for="code4"></label><textarea class="form-control" id="code4">
 // 通过加载远程js文件来执行代码，如果加载了恶意js则会造成任意命令执行
 // 远程恶意js: var a = mainOutput(); function mainOutput() { var x=java.lang.Runtime.getRuntime().exec("open -a Calculator");}
 // ⚠️ 在Java 8之后移除了ScriptEngineManager的eval
@@ -150,7 +151,7 @@ public void jsEngine(String url) throws Exception {
     engine.eval(payload, bindings);
 }
                     </textarea><br><br>
-
+                    <hr>
                     <a style="float:right" class="btn btn-sm btn-danger" target="_blank"
                        href="/RCE/Groovy/vul?cmd='open -a Calculator'.execute()">
                         <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
@@ -159,7 +160,8 @@ public void jsEngine(String url) throws Exception {
                         </svg>
                         <span class="align-middle"> Run</span></a>
                     <h5><span class="lnr lnr-bug"> 漏洞代码 - Groovy执行命令</span></h5>
-                    <label for="code4"></label><textarea class="form-control" id="code4">
+                    <label for="code5"></label>
+                    <textarea class="form-control" id="code5">
 // 不安全的使用Groovy调用命令
 
 import groovy.lang.GroovyShell;
@@ -168,8 +170,7 @@ public void groovy(String cmd) {
     GroovyShell shell = new GroovyShell();
     shell.evaluate(cmd);
 }
-                    </textarea><br><br>
-
+                    </textarea><br><br>-->
                 </div>
 
                 <div class="float2">
@@ -181,7 +182,7 @@ public void groovy(String cmd) {
                         </svg>
                         <span class="align-middle"> Run</span></a>
                     <h5><span class="lnr lnr-smile"> 安全代码 - 过滤方式</span></h5>
-                    <label for="code6"></label><textarea class="form-control" id="code6">
+                    <label for="code3"></label><textarea class="form-control" id="code3">
 // 自定义黑名单，这里过滤了常见的管道符，可自行添加
 
 public static boolean checkOs(String content) {
@@ -194,7 +195,7 @@ public static boolean checkOs(String content) {
     return false;
 }
                     </textarea><br><br>
-
+                    <hr>
                     <a style="float:right" class="btn btn-sm btn-success" target="_blank"
                        th:href="@{/RCE/Runtime/safe?cmd=whoami}">
                         <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
@@ -203,7 +204,7 @@ public static boolean checkOs(String content) {
                         </svg>
                         <span class="align-middle"> Run</span></a>
                     <h5><span class="lnr lnr-smile"> 安全代码 - 白名单方式</span></h5>
-                    <label for="code7"></label><textarea class="form-control" id="code7">
+                    <label for="code4"></label><textarea class="form-control" id="code4">
 // 使用白名单替换黑名单。黑名单需要不断更新，而白名单只需要指定允许执行的命令，更容易维护。
 
 public static String safe(String cmd) {
